testdata/baselines/reference/submodule/conformance/typedefCrossModule4.errors.txt
mod3.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== mod3.js (1 errors) ====
    /** @typedef {number} Foo */
    class Bar { }
    module.exports = { Foo: Bar };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    